--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
